# tetris-sdl3

./: CMakeLists.txt  README.md  abstracttexture.cpp  abstracttexture.h  appstate.cpp  appstate.h  boardcomponent.cpp  boardcomponent.h  collidable.h  component.h  exitstate.cpp  exitstate.h  gameoverstate.cpp  gameoverstate.h  gamestate.h  introstate.cpp  introstate.h  main.cpp  playstate.cpp  playstate.h  statemanager.cpp  statemanager.h  tasks.md  tetronomio.cpp  tetronomio.h  texttexture.cpp  texttexture.h  texture.cpp  texture.h  timer.cpp  timer.h
